--- a/public/css/dark-theme.css
+++ b/public/css/dark-theme.css
@@ -17,15 +17,15 @@
 .dark-theme .switch-position {
   position: fixed;
   top: 0;
-  right: 10px;
+  right: 0;
   z-index: 15;
 }
 
 .dark-theme .switch-position .switch-body {
   position: relative;
   margin: auto;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   color: #4ecca3;
 }
@@ -35,7 +35,7 @@
   top: 0;
   left: 0;
   width: inherit;
-  height: 40px;
+  height: inherit;
   opacity: 0;
   z-index: 16;
   cursor: pointer;
@@ -60,8 +60,8 @@
 }
 
 .dark-theme .switch-position .switch-body .switch {
-  width: 40px;
-  height: 40px;
+  width: inherit;
+  height: inherit;
   position: absolute;
   left: 0;
   border-radius: 50%;
@@ -788,7 +788,7 @@
   }
   .dark-theme .menu {
     opacity: 1;
-    top: 10px;
+    top: 0;
     -webkit-transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
     transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
   }
