--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,15 +32,15 @@ html {
 .dark-theme .switch-position {
   position: fixed;
   top: 0;
-  right: 10px;
+  right: 0;
   z-index: 15;
 }
 
 .dark-theme .switch-position .switch-body {
   position: relative;
   margin: auto;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   color: #4ecca3;
 }
@@ -50,7 +50,7 @@ html {
   top: 0;
   left: 0;
   width: inherit;
-  height: 40px;
+  height: inherit;
   opacity: 0;
   z-index: 16;
   cursor: pointer;
@@ -75,8 +75,8 @@ html {
 }
 
 .dark-theme .switch-position .switch-body .switch {
-  width: 40px;
-  height: 40px;
+  width: inherit;
+  height: inherit;
   position: absolute;
   left: 0;
   border-radius: 50%;
@@ -803,7 +803,7 @@ html {
   }
   .dark-theme .menu {
     opacity: 1;
-    top: 10px;
+    top: 0;
     -webkit-transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
     transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
   }
@@ -863,15 +863,15 @@ html {
 .light-theme .switch-position {
   position: fixed;
   top: 0;
-  right: 10px;
+  right: 0;
   z-index: 15;
 }
 
 .light-theme .switch-position .switch-body {
   position: relative;
   margin: auto;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   color: #232931;
 }
@@ -881,7 +881,7 @@ html {
   top: 0;
   left: 0;
   width: inherit;
-  height: 40px;
+  height: inherit;
   opacity: 0;
   z-index: 16;
   cursor: pointer;
@@ -906,8 +906,8 @@ html {
 }
 
 .light-theme .switch-position .switch-body .switch {
-  width: 40px;
-  height: 40px;
+  width: inherit;
+  height: inherit;
   position: absolute;
   left: 0;
   border-radius: 50%;
@@ -1510,7 +1510,7 @@ html {
   }
   .light-theme .menu {
     opacity: 1;
-    top: 10px;
+    top: 0;
     -webkit-transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
     transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
   }
