--- a/public/css/dark-theme.scss
+++ b/public/css/dark-theme.scss
@@ -593,6 +593,9 @@
     .title {
       font-size: 40px !important;
     }
+    .show-side-nav {
+      width: 100%;
+    }
   }
 
   //Media-queries-end//
