--- a/public/css/light-theme.scss
+++ b/public/css/light-theme.scss
@@ -616,6 +616,9 @@
     .title {
       font-size: 40px !important;
     }
+    .show-side-nav {
+      width: 100%;
+    }
   }
 
   //Media-queries-end//
